--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 h1 {
     font-weight: 700;
     color: #af4c9d;
+    text-transform: capitalize;
 }
 
 .button-class {
@@ -20,4 +21,55 @@ h1 {
     background-color: white;
     color: #222222;
     border: 2px solid #af4c9d;
+}
+
+#modal-container {
+    display: none;
+}
+
+#modal-container.is-visible {
+    position: fixed;
+    padding: 80px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fafafa;
+    z-index: 999;
+    overflow: auto;
+    display: grid;
+    text-align: center;
+    animation: alternate;
+}
+
+.modal {
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    background: #f1e2ef;
+    border: 2px solid #af4c9d;
+    border-radius: 4px;
+    box-shadow: inset;
+    padding: 40px;
+    width: 400px;
+    max-width: 600%;
+    text-align: center;
+}
+
+.modal-close {
+    float: right;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
+    color: #171717;
+    text-decoration: underline;
+}
+
+.modal h1 {
+    margin-top: auto;
+}
+
+.modal p {
+    margin-bottom: auto;
 }
